Fixed center aligned buttons

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -7,6 +7,15 @@
     justify-content: center;
 }
 
+.posts-btn-wrapper {
+    margin: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 
 .btn-btn-posts {
 
